# roc-id

./: .hspec  CHANGELOG.md  LICENSE  README.md  ROC-ID-CharIndex.html  ROC-ID-CharSet.html  ROC-ID-Digit.html  ROC-ID-Digit1289.html  ROC-ID-Gender.html  ROC-ID-Language.html  ROC-ID-Letter.html  ROC-ID-Location.html  ROC-ID-Nationality.html  ROC-ID-Number-Unchecked.html  ROC-ID-Number.html  ROC-ID-Serial.html  ROC-ID.html  Setup.hs  cabal.project  doc-index.html  index.html  package.yaml  roc-id.cabal  roc-id.haddock  stack.yaml
.github/workflows/: build.yml
components/roc-id-test/: Spec.hs
components/roc-id-test-docs/: Main.hs
components/roc-id-test/Test/QuickCheck/Classes/: Hspec.hs
components/roc-id/ROC/: ID.hs
components/roc-id/ROC/ID/: CharIndex.hs  CharSet.hs  Digit.hs  Digit1289.hs  Gender.hs  Letter.hs  Location.hs  Nationality.hs  Unchecked.hs  Utilities.hs
source/test/: Spec.hs
src/: ROC.ID.CharIndex.html  ROC.ID.CharSet.html  ROC.ID.Digit.html  ROC.ID.Digit1289.html  ROC.ID.Gender.html  ROC.ID.Language.html  ROC.ID.Letter.html  ROC.ID.Location.Internal.html  ROC.ID.Location.html  ROC.ID.Nationality.html  ROC.ID.Number.Unchecked.html  ROC.ID.Number.html  ROC.ID.Serial.Internal.html  ROC.ID.Serial.html  ROC.ID.Unchecked.html  ROC.ID.Utilities.html  ROC.ID.html
test/: Spec.hs
test/Test/QuickCheck/Classes/: Hspec.hs
