name:           roc-id
version:        0.1.0.0
synopsis:       Haskell implementation of the ROC National Identification Number
                standard.
description:    Haskell implementation of the ROC National Identification Number
                (中華民國身分證號碼) standard.
category:       Identification
homepage:       https://github.com/jonathanknowles/roc-id#readme
bug-reports:    https://github.com/jonathanknowles/roc-id/issues
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      Jonathan Knowles
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/jonathanknowles/roc-id

library
  exposed-modules:
      ROC.ID
      ROC.ID.Digit
      ROC.ID.Gender
      ROC.ID.Language
      ROC.ID.Location
      ROC.ID.Serial
  other-modules:
      ROC.ID.Utilities
  hs-source-dirs:
      library
  ghc-options: -Wall
  build-depends:
      MonadRandom
    , Only
    , base >=4.7 && <5
    , text
    , vector-sized
  default-language: Haskell2010

test-suite roc-id-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_roc_id
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      MonadRandom
    , Only
    , QuickCheck
    , base >=4.7 && <5
    , generic-arbitrary
    , hspec
    , roc-id
    , text
    , vector-sized
  default-language: Haskell2010
