cabal-version:  3.0
name:           roc-id
version:        0.2.0.6
synopsis:       Implementation of the ROC (Taiwan) Uniform ID Number format.
category:       Identification
homepage:       https://github.com/jonathanknowles/roc-id#readme
bug-reports:    https://github.com/jonathanknowles/roc-id/issues
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      Jonathan Knowles
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

description:

  This package provides an implementation of the ROC (Taiwan) Uniform
  Identification Number (中華民國統一證號) format.

  This format is used by both National Identification Cards (國民身分證) and
  Alien Resident Certificates (居留證). Each identification number consists of
  a single uppercase letter followed by nine decimal digits, with the final
  digit serving as a checksum, calculated according to a standard algorithm.

  Example: `A123456789`

  This package offers functions for validating, decoding, and encoding these
  numbers.

  See the "ROC.ID" module to get started.

  For more details of the Uniform Identification Number format, see:

  * https://zh.wikipedia.org/wiki/中華民國國民身分證
  * https://en.wikipedia.org/wiki/National_identification_card_(Taiwan)
  * https://en.wikipedia.org/wiki/Resident_certificate

extra-doc-files:
  CHANGELOG.md
  README.md

common dependency-base
    build-depends:base                      >= 4.7          && < 4.22
common dependency-hspec
    build-depends:hspec                     >= 2.5.5        && < 2.12
common dependency-MonadRandom
    build-depends:MonadRandom               >= 0.5.1.1      && < 0.7
common dependency-nonempty-containers
    build-depends:nonempty-containers       >= 0.3.5.0      && < 0.4
common dependency-QuickCheck
    build-depends:QuickCheck                >= 2.13.2       && < 2.18
common dependency-quickcheck-classes
    build-depends:quickcheck-classes        >= 0.6.5.0      && < 0.7
common dependency-text
    build-depends:text                      >= 1.2.3.1      && < 2.2

source-repository head
  type: git
  location: https://github.com/jonathanknowles/roc-id

library
  import:
    , dependency-base
    , dependency-MonadRandom
    , dependency-nonempty-containers
    , dependency-text
  exposed-modules:
      ROC.ID
      ROC.ID.Digit
      ROC.ID.Gender
      ROC.ID.Language
      ROC.ID.Letter
      ROC.ID.Location
      ROC.ID.Nationality
      ROC.ID.Serial
  other-modules:
      ROC.ID.Digit1289
      ROC.ID.Location.Internal
      ROC.ID.Number
      ROC.ID.Number.Unchecked
      ROC.ID.Serial.Internal
      ROC.ID.Utilities
  hs-source-dirs:
      library
  ghc-options: -Wall
  default-language: Haskell2010

test-suite roc-id-test
  import:
    , dependency-base
    , dependency-hspec
    , dependency-MonadRandom
    , dependency-nonempty-containers
    , dependency-QuickCheck
    , dependency-quickcheck-classes
    , dependency-text
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Test.QuickCheck.Classes.Hspec
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , roc-id
  default-language: Haskell2010
